# cl-py-generator

./: .gitignore  AGENTS.md  README.md  README.org  README_SUMMARY.md  SUPPORTED_FORMS.md  cl-py-generator.asd  cleanup_big_files.md  example-to-test.md  gen.lisp  generate-docs.sh  instruction-next-agent.md  package.lisp  pipe.lisp  py.lisp  run-tests.sh  suggestions-new-forms.md  tests.lisp  transpiler-tests.lisp
.github/workflows/: build_103_04.yml
example/01_plot/: gen.lisp
example/02_qt/: gen.lisp
example/03_cl/: gen.lisp
example/05_trellis_qt/: gen00.lisp
example/06_fastai/: gen00.lisp
example/07_fastai_language/: gen00.lisp
example/08_glumpy/: README.org  gen00.lisp  gen01.lisp  gen02.lisp  gen03.lisp  gen04.lisp  gen05.lisp  gen06.lisp  gen07.lisp
example/09_rapids/: README.org
example/100_tle/: conversion.md
example/101_tex_layout/: conversation.md
example/102_fisher/: conversation.md
example/103_co2_sensor/: README.md  conversation.md  gen00.lisp  gen01.lisp  gen02.lisp  gen03.lisp  gen04.lisp  gen05.lisp  util.lisp
example/103_co2_sensor/source03/: CMakeLists.txt  main.cpp
example/103_co2_sensor/source04/: BmeSensor.cpp  BmeSensor.h  CMakeLists.txt  DataTypes.h  Display.cpp  Display.h  Graph.cpp  Graph.h  Ransac.cpp  Ransac.h  TcpConnection.cpp  TcpConnection.h  Uart.cpp  Uart.h  Wifi.cpp  Wifi.h  data_pb2.py  main.cpp  p05_pb_server.py  secret.h  setup02_copylocal.sh  setup03_proto.sh
example/103_co2_sensor/source04/proto/: data.proto
example/104_rocm/: 20230311rocminfo.txt  README.md  gen00.lisp
example/105_amd_opencv/: README.md  gen00.lisp  gen01.lisp  gen02.lisp  gen03.lisp  gen04.lisp
example/106_sar/: README.md  gen01.lisp
example/107_ofdm/: README.org  gen01.lisp  gen02.lisp
example/107_ofdm/source02/: CMakeLists.txt  OfdmConstants.h  OfdmReceiver.cpp  OfdmReceiver.h  OfdmTransmitter.cpp  OfdmTransmitter.h  main.cpp
example/109_mediapipe_segment/: README.md  gen01.lisp
example/10_cuda/: gen00.lisp
example/110_gentoo/: .gitignore  20230916_rocm-smi.txt  20230916_rocminfo.txt  README.md  TestOffload.cpp  battery_check.sh  bt.sh  config-6.3.12-gentoo-x86_64  config-6.6.12-gentoo-x86_64  config-6.6.30-gentoo-x86_46  config-6.6.62  dwm-6.4  dwm-6.5  init_dracut.sh  init_dracut_crypt.sh  initramfs.md  nettether.sh  no-use.md  package.use  rocminfo.txt  rust.md  world  xinitrc.sh
example/112_llama2/: README.md
example/113_brillouin/: README.md
example/114_gpt_finance/: README.md  amd.md  asml.md  hexagon_ab.md  intc.md  ipgp.md  nvda.md  roche.md
example/115_yt_ai_journal_club/: 001_positional_encodings.txt  002_transformer_kv_cache.txt
example/116_yt_comment_scraper/: gen00.lisp
example/117_langchain_azure_openai/: README.md  gen00.lisp  gen01.lisp  gen02.lisp
example/119_blog_ultrasonic/: sonic.md
example/11_numba/: gen00.lisp
example/120_blog_dmd/: README.md
example/121_kicad/: summary.md
example/122_bard/: README.md  gen00.lisp
example/123_openai/: gen00.lisp
example/124_openai_inofficial/: gen00.lisp
example/125_mediapipe_seg/: gen01.lisp
example/126_llm_split/: gen01.lisp
example/127_design_patterns/: README.md
example/128_jax_gemma/: README.md  gen01.lisp
example/129_color_conv/: README.md  gen01.lisp
example/12_cupy/: gen00.lisp
example/130_torch_optim/: README.md  gen01.lisp
example/131_whisper/: run_karpathy.sh  transcribe.sh
example/132_makemore5/: README.md  gen01.lisp  gen02.lisp  gen03.lisp  gen04.lisp  gen05.lisp
example/133_wg/: README.md
example/134_jax_sort/: README.md
example/135_kubler_gentoo_container/: README.md
example/136_tbs/: README.md  gen01.lisp
example/137_img2img/: run.py
example/138_with_them_test/: run_test.py
example/139_pyqt6/: p01_simple.py
example/13_fastai2_nlp/: README.org  gen00.lisp
example/141_jaxopt/: p01_gauss2d.py
example/142_sam2/: s.py
example/143_helium_gemini/: Fail2Ban.md  QUIC.md  README.md  collect_for_ai.sh  gapi.py  gapi2.py  gen01.lisp  gen02.lisp  gen03.lisp  gen04.lisp  gen04_data.lisp  generate_python.sh  get_transcript.py  run.py  selen_comments.py  setup01_gen04.sh
example/143_helium_gemini/source04/tsum/: AGENTS.md  basic_english.txt  cW3tzRzTHKI.en.vtt  checkup.py  example_input.txt  example_output.txt  example_output_abstract.txt  faq.md  gemini_embedding.txt  gemini_long_context.txt  gemini_pricing.txt  gemini_text_generation.txt  gemini_thinking.txt  gemini_token_count.txt  genai_interface.py  jail.local  nginx.conf  p04_host.py  p04_host.py_gen2  privacy.html  pyproject.toml  s01_validate_youtube_url.py  s02_parse_vtt_file.py  s03_convert_markdown_to_youtube_format.py  s04_convert_html_timestamps_to_youtube_links.py  search.py  start_tinyproxy.sh  t01_validate_youtube_url.py  t02_parse_vtt_file.py  t03_convert_markdown_to_youtube_format.py  t04_convert_html_timestamps_to_youtube_links.py  test_genai_stream_debug.py  test_genai_stream_debug.txt  thinking_cost.md  tinyproxy.conf  yt-dlp_usage.txt
example/143_helium_gemini/source04/tsum/doc/: architecture.md  database_loading_guide.md
example/143_helium_gemini/source04/tsum/exports/: extension.html  faq.html  privacy.html  sitemap.txt
example/144_fasthtml/: gen01.lisp  gen02.lisp  gen03.lisp
example/145_magnets/: code.py
example/146_build123d/: doc.md
example/147_neostumble/: gen01.lisp
example/148_systemlog/: doc.md
example/149_host_videos/: README.md  gen01.lisp
example/14_megatron_gpt/: README.org  gen00.lisp
example/150_pdf_db/: README.md  lookup.py  pdf_to_db.py  pyproject.toml  summary.md
example/151_video_player/: README.md
example/161_sqlite_embed/: gen01.lisp  p01_data.py  pyproject.toml
example/162_genai/: european_companies.txt  european_companies_error_out_20251004_06_43_24.yaml  gen01.lisp  gen02.lisp  mock_genai.py  p01_gen.py  p02_impl.py  p02_top.py  pyproject.toml  test_p02_impl.py
example/171_casadi/cpp_10/: CMakeLists.txt  main.cpp  plot_porkchop_cpp.py
source/: code.py
tools/: ast_diff.py  git-lisp-format  pre-commit  register.sh
train_llm/: README.md  gen01.lisp  gen02.lisp
(+1287 files in other folders)
