[project]
name = "embed"
version = "0.1.0"
description = "Experiment with google genai"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlite-minutils",
    #"google-genai[aoihttp]",
    "google-genai",
    "numpy",
    "pandas",
    "loguru",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
test = [
    "pytest",
]
