[project]
name = "transcript-summarizer"
version = "0.1.0"
description = "A YouTube transcript summarizer using Gemini and FastHTML."
authors = [
    { name = "wolpumba@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "google-generativeai",
    "python-fasthtml",
    "markdown",
    "yt-dlp",
    "uvicorn",
    "numpy",
    "webvtt-py",
    "sqlite-minutils",
]

[project.scripts]
start = "uvicorn p04_host:app --port 5001 --host 0.0.0.0"
